fix overflow of gallery

--- a/client/src/components/ImageGallery/ImageGallery.module.scss
+++ b/client/src/components/ImageGallery/ImageGallery.module.scss
@@ -7,7 +7,8 @@
 }
 
 .DevAfterRoot {
-  height: '100%';
+  height: 100%;
+  overflow: scroll;
 }
 
 .Caption {
